// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a basic checkbox field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c10 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`renders correctly for a disabled checkbox field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c10 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      disabled=""
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`renders correctly for a required field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c12:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c14 {
  top: 0.15em;
}

.c4 {
  display: inline-block;
}

.c10 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c7[disabled] + .c9 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c7:checked:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7:not([disabled]):checked + .c9 {
  border-color: #444bc9;
}

.c7:checked + .c9::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c7:checked + .c9::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c7[disabled]:checked + .c9::before {
  border-color: #9a9a9a;
}

.c13[disabled] + .c9 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c13:checked:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13:not([disabled]):checked + .c9 {
  border-color: #444bc9;
}

.c13:checked + .c9 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c13:checked + .c9::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c13:checked + .c9::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c13[disabled]:checked + .c9::before {
  border-color: #9a9a9a;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="true"
    class="c5 c4 c6"
  >
    <input
      class="c7 c8"
      type="checkbox"
      value=""
    />
    <div
      class="c9 c10 c0"
    />
    <span
      class="c11 c12"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`renders correctly for an input field with a description 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c15 {
  top: 0.15em;
}

.c4 {
  display: inline-block;
}

.c12 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c9[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c9:checked:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c9:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c9:not([disabled]):checked + .c11 {
  border-color: #444bc9;
}

.c9:checked + .c11::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c9:checked + .c11::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c9[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c14[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c14:checked:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:not([disabled]):checked + .c11 {
  border-color: #444bc9;
}

.c14:checked + .c11 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:checked + .c11::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c14:checked + .c11::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c14[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  display: block;
  font-size: 0.8rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <span
    class="c5 c6 c0"
  >
    Required for your fannypack
  </span>
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c7 c4 c8"
  >
    <input
      class="c9 c10"
      type="checkbox"
      value=""
    />
    <div
      class="c11 c12 c0"
    />
    <span
      class="c6 c13"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`renders correctly for an input field with a hint 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c6 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c6:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c12 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c12:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c11 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c11 {
  font-style: italic;
}

kbd.c11 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c11 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c11 {
  font-weight: bold;
}

sub.c11,
sup.c11 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c11,
u.c11 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c11,
cite.c11,
var.c11,
em.c11 {
  font-style: italic;
}

kbd.c11,
pre.c11,
samp.c11 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c11 .c15 {
  top: 0.15em;
}

.c4 {
  display: inline-block;
}

.c10 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c7[disabled] + .c9 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c7:checked:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c7:not([disabled]):checked + .c9 {
  border-color: #444bc9;
}

.c7:checked + .c9::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c7:checked + .c9::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c7[disabled]:checked + .c9::before {
  border-color: #9a9a9a;
}

.c14[disabled] + .c9 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c14:checked:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:focus + .c9 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:not([disabled]):checked + .c9 {
  border-color: #444bc9;
}

.c14:checked + .c9 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:checked + .c9::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c14:checked + .c9::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c14[disabled]:checked + .c9::before {
  border-color: #9a9a9a;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

.c13 {
  display: block;
  font-size: 0.8rem;
  margin-top: 0.25rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
  </div>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c5 c4 c6"
  >
    <input
      class="c7 c8"
      type="checkbox"
      value=""
    />
    <div
      class="c9 c10 c0"
    />
    <span
      class="c11 c12"
      id="label"
    >
      Check me
    </span>
  </label>
  <span
    class="c13 c11 c0"
  >
    Must be awesome
  </span>
</div>
`;

exports[`renders correctly for an optional input field 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c8 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c8:focus:not(:focus-visible) {
  outline: none;
}

.c10 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c10:focus:not(:focus-visible) {
  outline: none;
}

.c13 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c13:focus:not(:focus-visible) {
  outline: none;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

abbr.c6 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c6 {
  font-style: italic;
}

kbd.c6 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c6 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c6 {
  font-weight: bold;
}

sub.c6,
sup.c6 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c6,
u.c6 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c6,
cite.c6,
var.c6,
em.c6 {
  font-style: italic;
}

kbd.c6,
pre.c6,
samp.c6 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c6 .c15 {
  top: 0.15em;
}

.c4 {
  display: inline-block;
}

.c12 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c9 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c9[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c9:checked:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c9:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c9:not([disabled]):checked + .c11 {
  border-color: #444bc9;
}

.c9:checked + .c11::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c9:checked + .c11::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c9[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c14[disabled] + .c11 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c14:checked:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:focus + .c11 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:not([disabled]):checked + .c11 {
  border-color: #444bc9;
}

.c14:checked + .c11 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c14:checked + .c11::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c14:checked + .c11::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c14[disabled]:checked + .c11::before {
  border-color: #9a9a9a;
}

.c7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: block;
  font-weight: 600;
  margin-bottom: 0.25rem;
}

.c2 {
  margin-bottom: 0 !important;
}

.c5 {
  font-size: 0.8rem;
  color: #708da8;
  margin-left: 0.5rem;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div
    class="c1 c0"
    style="align-items: center;"
  >
    <label
      class="c2 c3 c4 c0"
      for="username"
    >
      Username
    </label>
    <span
      class="c5 c6 c0"
    >
      OPTIONAL
    </span>
  </div>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c7 c4 c8"
  >
    <input
      class="c9 c10"
      type="checkbox"
      value=""
    />
    <div
      class="c11 c12 c0"
    />
    <span
      class="c6 c13"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`states renders correctly for a checkbox field with state danger 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c11 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #c9444d;
  box-shadow: #c9444d 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="true"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`states renders correctly for a checkbox field with state primary 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c11 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`states renders correctly for a checkbox field with state success 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c11 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #2c8453;
  box-shadow: #2c8453 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;

exports[`states renders correctly for a checkbox field with state warning 1`] = `
.c0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c0:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-top: 0.5rem !important;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c5 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: white;
  color: inherit;
}

.c5:focus:not(:focus-visible) {
  outline: none;
}

.c9 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  margin-left: 0.5rem !important;
}

.c9:focus:not(:focus-visible) {
  outline: none;
}

abbr.c8 {
  border-bottom: 1px dotted;
  cursor: help;
  -webkit-text-decoration: none;
  text-decoration: none;
}

i.c8 {
  font-style: italic;
}

kbd.c8 {
  background: #454d5d;
  border-radius: 0.1rem;
  color: #fff;
  fill: #fff;
  padding: 0.1rem 0.2rem;
}

mark.c8 {
  background: #ffe9b3;
  border-radius: 0.1rem;
  padding: 0.1rem 0.2rem;
}

strong.c8 {
  font-weight: bold;
}

sub.c8,
sup.c8 {
  font-size: 0.8em;
  vertical-align: baseline;
}

ins.c8,
u.c8 {
  -webkit-text-decoration-skip: ink edges;
  text-decoration-skip: ink edges;
}

i.c8,
cite.c8,
var.c8,
em.c8 {
  font-style: italic;
}

kbd.c8,
pre.c8,
samp.c8 {
  font-family: 'SF Mono','Segoe UI Mono','Roboto Mono',Menlo,Courier,monospace;
}

.c8 .c11 {
  top: 0.15em;
}

.c2 {
  display: inline-block;
}

.c7 {
  border: 1px solid #bdbdbd;
  box-shadow: inset 0px 1px 2px #e5e5e5;
  border-radius: 0.2em;
  height: 1em;
  position: relative;
  width: 1em;
}

.c7 {
  border-color: #f2a100;
  box-shadow: #f2a100 0px 0px 0px 1px !important;
}

.c10[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c10:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c10:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c10:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c10:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c10[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c4 {
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
}

.c4[disabled] + .c6 {
  background-color: #f2f2f2;
  box-shadow: unset;
}

.c4:checked:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:focus + .c6 {
  border-color: #444bc9;
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:not([disabled]):checked + .c6 {
  border-color: #444bc9;
}

.c4:checked + .c6 {
  box-shadow: #444bc9 0px 0px 0px 1px !important;
}

.c4:checked + .c6::before {
  background-clip: padding-box;
  content: '';
  left: calc(50% - 0.1875em);
  top: calc(50% - 0.375em);
  position: absolute;
}

.c4:checked + .c6::before {
  border: 0.1em solid #444bc9;
  border-left-width: 0;
  border-top-width: 0;
  height: 0.625em;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  width: 0.375em;
}

.c4[disabled]:checked + .c6::before {
  border-color: #9a9a9a;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  class="c0"
  display="inline-block"
  style="display: inline-block;"
>
  <div />
  <label
    aria-describedby="label"
    aria-invalid="false"
    aria-label="Check me"
    aria-required="false"
    class="c1 c2 c3"
  >
    <input
      class="c4 c5"
      type="checkbox"
      value=""
    />
    <div
      class="c6 c7 c0"
    />
    <span
      class="c8 c9"
      id="label"
    >
      Check me
    </span>
  </label>
  <div />
</div>
`;
